--- a/Unicam.Paradigmi.Web/appsettings.json
+++ b/Unicam.Paradigmi.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MyDbContext": "data source=localhost; Initial catalog=LibreriaParadigmi; User Id=paradigmi; Password=paradigmi; TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
