--- a/Unicam.Paradigmi.Web/appsettings.json
+++ b/Unicam.Paradigmi.Web/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "MyDbContext": "data source=localhost; Initial catalog=LibreriaParadigmi; User Id=paradigmi; Password=paradigmi; TrustServerCertificate=True"
   },
+  "JwtAuthentication": {
+    "Key": "UnicamParadigmi.Chiave1234567890123",
+    "Issuer": "https://paradigmi.unicam.it"
+  },
   "AllowedHosts": "*"
 }
